// Vitest Snapshot v1

exports[`compile() > should successfully compile single expressions 1`] = `
"
  
  const e = (val) => {
    if (typeof val === 'function') {
      return val();
    }

    if (!val) {
      return '';
    }

    return val;
  };
  export const html = (props = {}) => {
    const Abell = { 
      props, 
      console: {
        log: (...args) => {
          console.log('\\\\u001b[90m[<anonymous>.abell]:\\\\u001b[39m', ...args);
          return '';
        }
      }
    };
    return \`<body>\${e( 3 + 4 )}</body>\`
  };
  export default html;
  "
`;

exports[`compile() > should successfully compile with declarations 1`] = `
"
  
      import fs from 'fs';
      import path from 'path';
      import { compile } from 'abell-renderer';
    
  const e = (val) => {
    if (typeof val === 'function') {
      return val();
    }

    if (!val) {
      return '';
    }

    return val;
  };
  export const html = (props = {}) => {
    const Abell = { 
      props, 
      console: {
        log: (...args) => {
          console.log('\\\\u001b[90m[<anonymous>.abell]:\\\\u001b[39m', ...args);
          return '';
        }
      }
    };
    return \`<body>
      \${e( 3 + 4 )}
      <b>\${e( 'Helloo'.toUpperCase() )}</b>
      <div>
        \${e(
          [1, 2, 3].map(i => 
            i * 2
          )
        )}
      </div>
    </body>\`
  };
  export default html;
  "
`;
